--- a/us/template/hosted_tour.html
+++ b/us/template/hosted_tour.html
@@ -277,16 +277,65 @@
                     </div>
                     <div class="d-flex flex-column gap-3 justify-content-center">
                         <a href="{% url 'tour_participants' i.id %}" class="btn btn-success">View Participants</a>
-                        <a href="" class="btn btn-primary">Edit Tournament</a>
+                        <a href="{% url 'edit_tour' i.id %}" class="btn btn-primary">Edit Tournament</a>
                         <button onclick="showConfirmation('{{ i.id }}')" class="btn btn-danger">Cancel Tournament</button>
                     </div>
                 </div>
             </div>
             {% endfor %}
             {% else %}
-            <p class="text-danger">No participants yet</p>
+            <p class="text-danger">No tournaments hosted</p>
             {% endif %}
+            
 
+            <div class="mt-5">
+                <p class="h4 text-secondary fw-bold">Finished Tournaments</p>
+
+            </div>
+
+            {% if finished %}
+            {% for i in finished %}
+
+            <div class="mt-4 border-top pt-4">
+
+                <div class="d-flex flex-lg-row flex-column gap-5">
+                    <div class="col-lg-4 col-12  mt-3">
+                        {% if i.img.url != '' %}
+                        <div class="mt-3">
+                            <img class="w-100" src="{{i.img}}" alt="">
+                        </div>
+                        {% endif %}
+                    </div>
+                    <div class="col-lg-5 col-12">
+                        <p class="fw-bold mt-5">{{i.title}}</p>
+                        <p>{{i.desc}}</p>
+                        <div class="mt-3">
+                            
+    
+                            <div class="d-flex gap-1">
+                                <p class="fw-bold">Date: </p>
+                                <p>{{i.tour_date}}</p>
+                            </div>
+                            <div class="d-flex gap-1">
+                                <p class="fw-bold">Venue: </p>
+                                <p>{{i.place}}</p>
+                            </div>
+                            <div class="d-flex gap-1">
+                                <p class="fw-bold">District: </p>
+                                <p>{{i.district}}</p>
+                            </div>
+                            
+                        </div>
+                    </div>
+                    <div class="d-flex flex-column gap-3 justify-content-center">
+                        <a href="{% url 'select_winner' i.id %}" class="btn btn-warning">Announce Winner</a>
+                    </div>
+                </div>
+            </div>
+            {% endfor %}
+            {% else %}
+            <p class="text-danger">No finished tournaments</p>
+            {% endif %}
 
         </div>
 
