--- a/us/template/edit_tour.html
+++ b/us/template/edit_tour.html
@@ -223,6 +223,8 @@
                     <div class="col-lg-8 col-12">
 
                         <div class="d-flex justify-content-center gap-2 m-5 flex-column">
+                            <label for="tourdate">Old Date:</label>
+                            <p class="fw-bold">{{tour.tour_date}}</p>
                             <label for="tourdate">New Date:</label>
                             <input type="datetime-local" value="{{tour.tour_date}}" class="form-control" required name="tourdate" id="tourdate">
 
@@ -237,17 +239,27 @@
                                     {% endfor %}
                                 </select>
                             </div>
+                            <label for="contact">Contact</label>
                             <input type="number" value="{{tour.contact}}" name="contact" min="0" class="form-control" placeholder="Contact Number" required>
                             <label for="contact" id="contactErrorLabel" class="text-danger"></label>
+                            <label for="place">Venue</label>
                             <input type="text" name="place" class="form-control" value="{{tour.place}}" placeholder="Venue" required>
 
-
+                            <label for="title">Title</label>
                             <textarea class="form-control" required name="title" id="" cols="30" rows="2"
                                 placeholder="Title">{{tour.title}}</textarea>
+                                <label for="desc">Description</label>
                             <textarea class="form-control" required name="desc" id="" cols="30" rows="5"
                                 placeholder="Description">{{tour.desc}}</textarea>
-                            <input type="number" max="32" value="{{tour.slots}}" min="{{count}}" name="slots" class="form-control" placeholder="Number of teams" required>
-                        </div>
+                                <label for="slots">Number of teams</label>
+                            <select name="slots" required class="form-control" id="">
+                                <option value="2">2</option>
+                                <option value="4">4</option>
+                                <option value="8">8</option>
+                                <option value="16">16</option>
+                                <option value="32">32</option>
+                            </select>
+                            </div>
                         <div class="d-flex justify-content-center">
                             <button type="submit" class="btn btn-success" disabled>Submit</button>
                         </div>
@@ -351,13 +363,11 @@ document.getElementsByName("tourdate")[0].min = today;
         var descInput = $('textarea[name="desc"]');
         var submitButton = $('button[type="submit"]');
         var contactInput = $('input[name="contact"]');
-        var slots = $('input[name="slots"]');
         var contactErrorLabel = $('#contactErrorLabel');
         contactInput.on('keyup', validateForm);
         tourdateInput.on('change', validateForm);
         titleInput.on('keyup', validateForm);
         descInput.on('keyup', validateForm);
-        slots.on('keyup', validateForm);
 
         // Function to perform validation
         function validateForm() {
@@ -377,7 +387,7 @@ document.getElementsByName("tourdate")[0].min = today;
             } else {
                 contactErrorLabel.text(''); // Clear error message
             }
-            if (titleValue === '' || descValue === '' || !isPhoneValid || slotsValue === '') {
+            if (titleValue === '' || descValue === '' || !isPhoneValid) {
                 isValid = false;
             }
             else{
