filter by ability

--- a/us/template/index.html
+++ b/us/template/index.html
@@ -325,7 +325,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <div class="ms-3 d-flex w-75">
                     <input type="text" class="form-control" id="search_bar" placeholder="Search">
-                    <button class="btn shadow-none"><i class="bi bi-search fs-3 text-white"></i></button>
+                    <a href="{% url 'search_players' %}" class="btn shadow-none"><i class="bi bi-search fs-3 text-white"></i></a>
                 </div>
                 <div id="search-results" class="col-lg-3 col-11 rounded shadow-lg">
                     <!-- Results will be displayed here -->
