--- a/us/template/tour_map.html
+++ b/us/template/tour_map.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load custom_filters %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -100,7 +101,7 @@
                 <div class="ms-3">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link  text-white" aria-current="page" href="{% url 'index' %}">Home</a>
+                            <a class="nav-link  text-secondary" aria-current="page" href="{% url 'index' %}">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-secondary" aria-current="page"
@@ -109,6 +110,10 @@
                         <li class="nav-item">
                             <a class="nav-link text-secondary" aria-current="page"
                                 href="{% url 'ScoutPlayer' %}">Players</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" aria-current="page"
+                                href="{% url 'following_feeds' %}">Feeds</a>
                         </li>
                     </ul>
                 </div>
@@ -122,7 +127,7 @@
             </div>
         </div>
     </nav>
-    {% elif user.is_club %}
+    {% elif user.is_player %}
     <nav class="navbar player-navbar navbar-expand-lg">
         <div class="container-fluid">
             <a class="ms-5 navbar-brand d-flex fs-2 fw-bold" href="#">
@@ -144,21 +149,27 @@
                 <div class="ms-3">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link  text-white" aria-current="page" href="{% url 'index' %}">Home</a>
+                            <a class="nav-link  text-secondary" aria-current="page" href="{% url 'index' %}">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-secondary" aria-current="page"
-                                href="{% url 'ClubScout' %}">Scouts</a>
+                                href="{% url 'PlayerScout' %}">Scouts</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-secondary" aria-current="page"
-                                href="{% url 'ClubPlayer' %}">Players</a>
+                                href="{% url 'player-club' %}">Clubs</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" aria-current="page"
+                                href="{% url 'following_feeds' %}">Feeds</a>
+                        </li>
+
+
                     </ul>
                 </div>
                 <div class="d-flex w-100 justify-content-start justify-content-sm-end">
                     <div class="border rounded p-2 pb-0 mt-2 ms-3">
-                        <p class="text-light "><i class="bi bi-shield-fill"></i> {{user.club_name}}</p>
+                        <p class="text-light "><i class="bi bi-person-circle"></i> {{user.first_name}}</p>
                     </div>
                     <a class="d-flex flex-column justify-content-center text-decoration-none"
                         href="{% url 'logout' %}"><button class="btn text-white ms-4">Log-out</button></a>
@@ -188,22 +199,34 @@
                 <div class="ms-3">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link  text-white" aria-current="page" href="{% url 'index' %}">Home</a>
+                            <a class="nav-link  text-secondary" aria-current="page" href="{% url 'index' %}">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-secondary" aria-current="page"
-                                href="{% url 'PlayerScout' %}">Scouts</a>
+                                href="{% url 'ClubScout' %}">Scouts</a>
+                        </li>
+                        
+                        <li class="nav-item">
+                            <a class="nav-link text-secondary" aria-current="page"
+                                href="{% url 'following_feeds' %}">Feeds</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" aria-current="page"
+                                href="{% url 'tournaments' %}">Tournaments</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-secondary" aria-current="page"
-                                href="{% url 'player-club' %}">Clubs</a>
+                                href="{% url 'enrolled' %}">Enrolled</a>
                         </li>
-
+                        <li class="nav-item">
+                            <a class="nav-link text-secondary" aria-current="page"
+                                href="{% url 'hosted_tour' %}">Hosted</a>
+                        </li>
                     </ul>
                 </div>
                 <div class="d-flex w-100 justify-content-start justify-content-sm-end">
                     <div class="border rounded p-2 pb-0 mt-2 ms-3">
-                        <p class="text-light "><i class="bi bi-person-circle"></i> {{user.first_name}}</p>
+                        <p class="text-light "><i class="bi bi-shield-fill"></i> {{user.club_name}} </p>
                     </div>
                     <a class="d-flex flex-column justify-content-center text-decoration-none"
                         href="{% url 'logout' %}"><button class="btn text-white ms-4">Log-out</button></a>
@@ -212,69 +235,40 @@
         </div>
     </nav>
     {% endif %}
-    <div class="d-flex justify-content-center">
-        <div class="bg-white shadow-lg mt-4 pb-3 rounded col-12 col-lg-8">
-            <p class="m-4 text-secondary fs-4 fw-bold">Tournament Info</p>
-            <form action="" method="post" enctype="multipart/form-data">
-                {% csrf_token %}
-                <div class="d-flex justify-content-center"><input type="file" required class="mt-4" name="img"
-                        value="Change image" accept="image/*"></div>
-                <div class="d-flex justify-content-center">
-                    <div class="col-lg-8 col-12">
-
-                        <div class="d-flex justify-content-center gap-2 m-5 flex-column">
-                            <label for="tourdate">Tournament Date:</label>
-                            <input type="datetime-local" class="form-control" required name="tourdate" id="tourdate">
-
-
-
-                            <div class="d-flex flex-column w-100">
-                                <label for="dist">District</label>
-                                <select class="form-control" name="dist" id="">
-                                    {% for choice_value,choice in district_choices %}
-                                    <option value="{{ choice }}">{{ choice }}</option>
-                                    {% endfor %}
-                                </select>
-                            </div>
-                            <input type="number" name="contact" min="0" class="form-control" placeholder="Contact Number" required>
-                            <label for="contact" id="contactErrorLabel" class="text-danger"></label>
-                            <input type="text" name="place" class="form-control" placeholder="Venue" required>
-
-
-                            <textarea class="form-control" required name="title" id="" cols="30" rows="2"
-                                placeholder="Title"></textarea>
-                            <textarea class="form-control" required name="desc" id="" cols="30" rows="5"
-                                placeholder="Description"></textarea>
-                                <label for="slots">Number of teams</label>
-                                <select name="slots" required class="form-control" id="">
-                                    <option value="2">2</option>
-                                    <option value="4">4</option>
-                                    <option value="8">8</option>
-                                    <option value="16">16</option>
-                                    <option value="32">32</option>
-                                </select>
-                                <label for="lat">Enter Coordinates (If Available)</label>
-                                <input type="text" name="lat" class="form-control" placeholder="Latitude">
-                                <input type="text" name="lon" class="form-control" placeholder="Longitude">
-                        </div>
-                        <div class="d-flex justify-content-center">
-                            <button type="submit" class="btn btn-success" disabled>Submit</button>
-                        </div>
-                    </div>
-                </div>
-            </form>
-        </div>
+    <div class="container-fluid col-12 d-flex justify-content-center bg-dark">
+        <div class="map" id="myMap" style="width: 90%; height: 700px"></div>
     </div>
+    <script src="https://www.bing.com/api/maps/mapcontrol?callback=loadMapScenario&key={{ bing_maps_api_key }}" async defer></script>
+
+    <script>
+        function loadMapScenario() {
+            var map = new Microsoft.Maps.Map(document.getElementById('myMap'), {
+                credentials: 'Agyr0UQGWTFzP3Fwb3PDJ_ahP24jx9jRgpUWwBD_37B8MXu1oql6WCs6J-vgU1YT',
+                center: new Microsoft.Maps.Location('{{ tour_data.latitude }}', '{{ tour_data.longitude }}'),
+                zoom: 10
+            });
+            var centerLocation = new Microsoft.Maps.Location('{{ tour_data.latitude }}', '{{ tour_data.longitude }}');
+            var pushpin = new Microsoft.Maps.Pushpin(centerLocation, {
+                title: '{{tour_data.place}}',
+                
+            });
+            map.entities.push(pushpin);
+        }
+    </script>
 </body>
 
 </html>
-
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<form action="post">
+    {% csrf_token %}
+</form>
 
 <script>
     $(document).ready(function () {
-        var today = new Date().toISOString().slice(0, 16);
+        function getCSRFToken() {
+            return $('input[name="csrfmiddlewaretoken"]').val();
+        }
 
-document.getElementsByName("tourdate")[0].min = today;
         $("#search_bar").keyup(function () {
 
             var headers = {
@@ -344,53 +338,25 @@ document.getElementsByName("tourdate")[0].min = today;
                 }
             })
         })
-    })
-</script>
-<script>
-    // Get the current date in the format "YYYY-MM-DD"
-    const currentDate = new Date().toISOString().split('T')[0];
-    // Set the minimum attribute of the date input to the current date
-    document.getElementById('tourdate').setAttribute('min', currentDate);
-</script>
-<script>
-    $(document).ready(function () {
-        // Get references to the input fields and submit button
-        var tourdateInput = $('#tourdate');
-        var titleInput = $('textarea[name="title"]');
-        var descInput = $('textarea[name="desc"]');
-        var submitButton = $('button[type="submit"]');
-        var contactInput = $('input[name="contact"]');
-        var contactErrorLabel = $('#contactErrorLabel');
-        contactInput.on('keyup', validateForm);
-        tourdateInput.on('keyup', validateForm);
-        titleInput.on('keyup', validateForm);
-        descInput.on('keyup', validateForm);
-
-        // Function to perform validation
-        function validateForm() {
-            // Get the values from the input fields
-            var tourdateValue = tourdateInput.val().trim();
-            var titleValue = titleInput.val().trim();
-            var descValue = descInput.val().trim();
-            var contactValue = contactInput.val().trim();
-
-            // Perform your validation logic here
-             // Placeholder for your validation logic
-            var phoneRegex = /^\d{10}$/; // Assumes a 10-digit phone number format
-            var isPhoneValid = phoneRegex.test(contactValue);
-            if (!isPhoneValid) {
-                contactErrorLabel.text('Invalid phone number');
-            } else {
-                contactErrorLabel.text(''); // Clear error message
-            }
-            if (titleValue === '' || descValue === '' || !isPhoneValid) {
-                isValid = false;
-            }
-            else{
-                isValid=true;
-            }
-            // Enable or disable the submit button based on validation result
-            submitButton.prop('disabled', !isValid);
-        }
     });
+</script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+<script>
+    function showConfirmation(tour_id) {
+        console.log(tour_id);
+
+        Swal.fire({
+            title: 'Are you sure?',
+            text: 'Do you want to enroll in this tournament?',
+            icon: 'question',
+            showCancelButton: true,
+            confirmButtonColor: '#3085d6',
+            cancelButtonColor: '#d33',
+            confirmButtonText: 'Yes'
+        }).then((result) => {
+            if (result.isConfirmed) {
+                window.location.href = "{% url 'enrol_tour' 0 %}".replace('0', tour_id);
+            }
+        });
+    }
 </script>
