--- a/us/template/ScoutPlayerEdit.html
+++ b/us/template/ScoutPlayerEdit.html
@@ -163,7 +163,7 @@
                                 <input class="form-control" type="number" min="0" name="goalkeeping_speed" max="100">
                             </div>
                             <div class="d-flex flex-column w-100">
-                                <label for="desc">Speed</label>
+                                <label for="desc">Overall</label>
                                 <textarea name="desc1" class="form-control" id="" cols="5" rows="5"></textarea>
                             </div>
                         </div>
@@ -194,7 +194,7 @@
                                     <input class="form-control" type="number" min="0" name="physical" max="100">
                                 </div>
                                 <div class="d-flex flex-column w-100">
-                                    <label for="desc">Speed</label>
+                                    <label for="desc">Overall</label>
                                     <textarea name="desc" class="form-control" id="" cols="5" rows="5"></textarea>
                                 </div>
                             </div>
