--- a/us/template/scout_report.html
+++ b/us/template/scout_report.html
@@ -81,7 +81,8 @@
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <title>Document</title>
+    @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
+    <title class="notranslate">Scout Report</title>
 </head>
 
 <body class="bg-light">
@@ -222,9 +223,11 @@
                                 </p></div>
                             </blockquote>
                             {% else %}
-                            <p class="text-danger">
-                                Scout Report not registered
-                            </p>
+                            <div class="d-flex justify-content-center">
+                                <p class="text-danger">
+                                    <i class="bi bi-ban-fill"></i> Scout Report not registered
+                                </p>
+                            </div>
                             {% endif %}
                         </div>
                     </div>
